objects/QCloudsSaaS__QCIssue__c.object
<CustomObject>
    <description>Salesforce Issue fetched from the Quality Clouds API</description>
    <fields>
        <fullName>Link_to_Issue__c</fullName>
        <formula>HYPERLINK(&quot;/apex/QCloudsSaaS__IssueDetail?id=&quot; &amp;  QCloudsSaaS__ID__c  &amp; &quot;&amp;id_scan=&quot; &amp;  QCloudsSaaS__Scan__r.QCloudsSaaS__ID__c  &amp; &quot;&amp;id_instance=&quot; &amp;  QCloudsSaaS__Scan__r.QCloudsSaaS__Instance__r.QCloudsSaaS__ID__c  , &quot;Link to Issue&quot;, &quot;blank&quot;)</formula>
        <label>Link to Issue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__Created_By__c</fullName>
        <description>User Id who created the affected element</description>
        <inlineHelpText>User Id who created the affected element</inlineHelpText>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__Created_On__c</fullName>
        <description>Date on which the affected element was created</description>
        <inlineHelpText>Date on which the affected element was created</inlineHelpText>
        <label>Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__Documentation__c</fullName>
        <description>Documentation URL</description>
        <inlineHelpText>Documentation URL</inlineHelpText>
        <label>Documentation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__Element_Name__c</fullName>
        <description>Name of the affected element</description>
        <inlineHelpText>Name of the affected element</inlineHelpText>
        <label>Element Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__Element_Type__c</fullName>
        <description>Type of the affected element</description>
        <inlineHelpText>Type of the affected element</inlineHelpText>
        <label>Element Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__ID__c</fullName>
        <externalId>true</externalId>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__Impact_Area__c</fullName>
        <description>Impact Area</description>
        <inlineHelpText>Impact Area</inlineHelpText>
        <label>Impact Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SCALABILITY</fullName>
                </value>
                <value>
                    <fullName>PERFORMANCE</fullName>
                </value>
                <value>
                    <fullName>MANAGEABILITY</fullName>
                </value>
                <value>
                    <fullName>SECURITY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__Issue__c</fullName>
        <description>Issue Type</description>
        <inlineHelpText>Issue Type</inlineHelpText>
        <label>Issue Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__Line_Number__c</fullName>
        <description>Line number where the issue was detected</description>
        <inlineHelpText>Line number where the issue was detected</inlineHelpText>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__Link__c</fullName>
        <description>Link from Quality Clouds API</description>
        <inlineHelpText>Link from Quality Clouds API</inlineHelpText>
        <label>Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__Link_to_Element__c</fullName>
        <description>Go to Element</description>
        <inlineHelpText>Go to Element</inlineHelpText>
        <label>Link to Element</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__Scan__c</fullName>
        <description>Scan the issue is part of</description>
        <inlineHelpText>Scan the issue is part of</inlineHelpText>
        <label>Scan</label>
        <referenceTo>QCloudsSaaS__Scann__c</referenceTo>
        <relationshipLabel>QCIssues</relationshipLabel>
        <relationshipName>QCIssues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__Severity__c</fullName>
        <description>Severity</description>
        <inlineHelpText>Severity</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HIGH</fullName>
                </value>
                <value>
                    <fullName>MEDIUM</fullName>
                </value>
                <value>
                    <fullName>LOW</fullName>
                </value>
                <value>
                    <fullName>WARNING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__Updated_By__c</fullName>
        <description>User Id who last updated the affected element</description>
        <inlineHelpText>User Id who last updated the affected element</inlineHelpText>
        <label>Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__Updated_On__c</fullName>
        <description>Date on which the affected element was last updated</description>
        <inlineHelpText>Date on which the affected element was last updated</inlineHelpText>
        <label>Updated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__Write_off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Write off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>QCIssues</relationshipLabel>
        <relationshipName>QCIssues</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>QCIssue</label>
    <nameField>
        <label>QCIssue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QCIssues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>